syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "AccountingInvoiceProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Invoice
message InvoiceFlatData {
    option (routines.entity_type) = "Invoice";
    option (routines.keys).keys = "invoice_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: invoiceId
    string invoice_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string invoice_type_id = 2 [(routines.opts).field_type = "id"];
    string party_id_from = 3 [(routines.opts).field_type = "id"];
    string party_id = 4 [(routines.opts).field_type = "id"];
    string role_type_id = 5 [(routines.opts).field_type = "id"];
    string status_id = 6 [(routines.opts).field_type = "id"];
    string billing_account_id = 7 [(routines.opts).field_type = "id"];
    string contact_mech_id = 8 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp invoice_date = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp due_date = 10 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp paid_date = 11 [(routines.opts).field_type = "date-time"];
    string invoice_message = 12 [(routines.opts).field_type = "long-varchar"];
    string reference_number = 13 [(routines.opts).field_type = "short-varchar"];
    string description = 14 [(routines.opts).field_type = "description"];
    string currency_uom_id = 15 [(routines.opts).field_type = "id"];
    string recurrence_info_id = 16 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 17 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 18 [(routines.opts).field_type = "date-time"];
    string tenant_id = 19 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 48;
    map<string, google.protobuf.Any> attachments = 49 ;
}

message InvoiceKey{
    string invoice_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message InvoiceList{
    repeated InvoiceFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListInvoices` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Invoice Item
message InvoiceItemFlatData {
    option (routines.entity_type) = "InvoiceItem";
    option (routines.keys).keys = "invoice_id, invoice_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: invoiceId, invoiceItemSeqId
    string invoice_id = 1 [(routines.opts).field_type = "id"];
    string invoice_item_seq_id = 2 [(routines.opts).field_type = "id"];
    string invoice_item_type_id = 3 [(routines.opts).field_type = "id"];
    string override_gl_account_id = 4 [(routines.opts).field_type = "id"];
    string override_org_party_id = 5 [(routines.opts).field_type = "id"];
    string inventory_item_id = 6 [(routines.opts).field_type = "id"];
    string product_id = 7 [(routines.opts).field_type = "id"];
    string product_feature_id = 8 [(routines.opts).field_type = "id"];
    string parent_invoice_id = 9 [(routines.opts).field_type = "id"];
    string parent_invoice_item_seq_id = 10 [(routines.opts).field_type = "id"];
    string uom_id = 11 [(routines.opts).field_type = "id"];
    routines.Indicator taxable_flag = 12 [(routines.opts).field_type = "indicator"];
    routines.FixedPoint quantity = 13 [(routines.opts).field_type = "fixed-point"];
    routines.Currency amount = 14 [(routines.opts).field_type = "currency-precise"];
    string description = 15 [(routines.opts).field_type = "description"];
    string tax_auth_party_id = 16 [(routines.opts).field_type = "id"];
    string tax_auth_geo_id = 17 [(routines.opts).field_type = "id"];
    string tax_authority_rate_seq_id = 18 [(routines.opts).field_type = "id"];
    string sales_opportunity_id = 19 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 20 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 21 [(routines.opts).field_type = "date-time"];
    string id = 22 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string tenant_id = 23 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 51;
    map<string, google.protobuf.Any> attachments = 52 ;
}

message InvoiceItemKey{
    string invoice_id = 1 [(routines.opts).field_type = "id"];
    string invoice_item_seq_id = 2 [(routines.opts).field_type = "id"];
}

message InvoiceItemList{
    repeated InvoiceItemFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListInvoiceItems` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Invoice Item Type GL Account
message InvoiceItemTypeGlAccountData {
    option (routines.entity_type) = "InvoiceItemTypeGlAccount";
    option (routines.keys).keys = "invoice_item_type_id, organization_party_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: invoiceItemTypeId, organizationPartyId
    // fields
    string invoice_item_type_id = 1 [(routines.opts).field_type = "id"];
    string organization_party_id = 2 [(routines.opts).field_type = "id"];
    string gl_account_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message InvoiceItemTypeGlAccountKey{
    string invoice_item_type_id = 1 [(routines.opts).field_type = "id"];
    string organization_party_id = 2 [(routines.opts).field_type = "id"];
}

message InvoiceItemTypeGlAccountList{
    repeated InvoiceItemTypeGlAccountData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListInvoiceItemTypeGlAccounts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Invoice Role
message InvoiceRoleData {
    option (routines.entity_type) = "InvoiceRole";
    option (routines.keys).keys = "invoice_id, party_id, role_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: invoiceId, partyId, roleTypeId
    // fields
    string invoice_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp datetime_performed = 4 [(routines.opts).field_type = "date-time"];
    routines.FixedPoint percentage = 5 [(routines.opts).field_type = "fixed-point"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message InvoiceRoleKey{
    string invoice_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
}

message InvoiceRoleList{
    repeated InvoiceRoleData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListInvoiceRoles` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Invoice Status
message InvoiceStatusData {
    option (routines.entity_type) = "InvoiceStatus";
    option (routines.keys).keys = "status_id, invoice_id, status_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: statusId, invoiceId, statusDate
    // fields
    string status_id = 1 [(routines.opts).field_type = "id"];
    string invoice_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp status_date = 3 [(routines.opts).field_type = "date-time"];
    string change_by_user_login_id = 4 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


message InvoiceStatusKey{
    string status_id = 1 [(routines.opts).field_type = "id"];
    string invoice_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp status_date = 3 [(routines.opts).field_type = "date-time"];
}

message InvoiceStatusList{
    repeated InvoiceStatusData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListInvoiceStatuses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


